# DependoBuf

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  Dockerfile.builder  Dockerfile.dev  Dockerfile.runtime  README.md  build.sh  index.html  mkdocs.yml  t  test.sh
lib/core/checker/: CMakeLists.txt  checker.cc  common.cc  expression_comparator.cc  generic_resolver.cc  name_resolution_checker.cc  positivity_checker.cc  type_checker.cc  type_comparator.cc  type_expression_checker.cc
lib/core/codegen/: CMakeLists.txt  cpp_gen.cc  dart_gen.cc  generation.cc  py_gen.cc  py_print.cc  rust_check_gen.cc  rust_gen.cc  rust_struct_gen.cc  typescript_gen.cc
lib/core/parser/: CMakeLists.txt  ast.cc  dbuf.l  dbuf.y  dbuf.yy  driver.cc  expression.cc  parse_helper.cc
lib/serializer/conv/: CMakeLists.txt  conv.c
lib/serializer/serialization/: CMakeLists.txt  deserialization.c  node_handler.c  serialization.c
lib/serializer/snappy-c/: CMakeLists.txt  snappy-c.c
lib/serializer/test/: CMakeLists.txt  test_barray.c  test_includes.h  test_serialization.c  test_varint.c
src/: CMakeLists.txt  main.cc  main.cpp
src/parser/: ast.cc  ast.h  dbuf.l  dbuf.yacc  dbuf.yy  driver.cpp  driver.hpp  expression.cc  expression.cpp  expression.h  lexer.hpp  parser.c  scanner.c  scanner.h
test/: CMakeLists.txt  avaliable_formats_test.cc  compile_test.cc  cpp_message_test.cc  cpp_test.cc  go_test.cc  init.c  kotlin_test.cc  lexer_test.cc  name_resolution_test.cc  parse_input.c  parser_test.cc  parser_test.cpp  positivity_test.cc  py_gen_test.cc  rust_codegen_test.cc  sharp_test.cc  test.cc
test/code_generation_samples/py/: code.py  example.py  message_1.py  message_2.py  research.py  research2.py  sample0.py  sample1.py  sample12.py  sample13.py  sample14.py  sample2.py  sample3.py  sample4.py  sample5.py  sample8.py  sample9.py
test/code_samples/: complex_dependencies.dbuf  complex_dependencies_arithmetic.dbuf  complex_dependencies_bool.dbuf  complex_fields_all_types.dbuf  complex_fields_arithmetic.dbuf  complex_fields_bool.dbuf  constructros_with_fields.dbuf  empty.dbuf  empty_message.dbuf  fields_depend_on_dependencies.dbuf  fields_depend_on_dependencies_arithmetic.dbuf  fields_depend_on_dependencies_bool.dbuf  fields_pattern_matching.dbuf  multiple_dependencies_pattern_matching.dbuf  one_case_patter_matching.dbuf  one_dependency_pattern_matching.dbuf  simple_constructors.dbuf  simple_dependencies.dbuf  simple_dependencies_arithmetic.dbuf  simple_dependencies_fields.dbuf  simple_fields.dbuf
test/code_samples/collections_syntax/: 2-dimension_array.dbuf  array_access.dbuf  array_and_set_in_dependency.dbuf  array_concat.dbuf  array_of_messages.dbuf  redeclaration.dbuf  set_operations.dbuf  simple_array.dbuf  simple_set.dbuf  usage_of_in.dbuf  usage_of_initializer_list.dbuf
test/code_samples/control_samples/: sample0.dbuf  sample10.dbuf  sample11.dbuf  sample12.dbuf  sample13.dbuf  sample14.dbuf  sample3.dbuf  sample4.dbuf  sample5.dbuf  sample6.dbuf  sample8.dbuf  sample9.dbuf
test/code_samples/correct_syntax/: complex_dependencies.dbuf  complex_dependencies_bool.dbuf  complex_fields_all_types.dbuf  complex_fields_arithmetic.dbuf  complex_fields_bool.dbuf  complex_star.dbuf  constructros_with_fields.dbuf  empty_message.dbuf  fields_depend_on_dependencies.dbuf  fields_depend_on_dependencies_arithmetic.dbuf  fields_depend_on_dependencies_bool.dbuf  fields_pattern_matching.dbuf  generic_enum.dbuf  generic_int_pair.dbuf  generic_pair.dbuf  generic_triple.dbuf  literals.dbuf  multiple_dependencies_pattern_matching.dbuf  one_case_patter_matching.dbuf  one_dependency_pattern_matching.dbuf  simple_constructors.dbuf  simple_dependencies_arithmetic.dbuf  simple_dependencies_fields.dbuf  simple_fields.dbuf  simple_generic.dbuf  simple_message.dbuf  simple_star.dbuf  star.dbuf  type_as_field.dbuf  type_as_param.dbuf  var_access.dbuf
test/code_samples/function_syntax/: test1.dbuf  test2.dbuf
test/code_samples/incorrect_syntax/: bad_generic_int_pair.dbuf  constructor_redeclaration.dbuf  dependency_loop_multiple.dbuf  dependency_loop_other.dbuf  dependency_loop_self.dbuf  field_redeclaration.dbuf  global_names_repetition.dbuf  name_resolution.dbuf  redefinition_message.dbuf  unknown_constructor.dbuf  unknown_field_of_constructor.dbuf  unknown_typename.dbuf  unknown_variable.dbuf  variable_redeclaration.dbuf  wf_enum_field_self.dbuf  wf_enum_other.dbuf  wf_enum_self.dbuf  wf_mixed.dbuf  wf_mixed_2.dbuf  wf_mixed_field.dbuf
test/code_samples/recursive_types/: self_recursive_enum.dbuf  self_recursive_message.dbuf  two_way_recursive_enum.dbuf  two_way_recursive_message.dbuf
test/code_samples/type_check/: comparison.dbuf  generic_dependent.dbuf  generic_dependent_2.dbuf  generic_dependent_3.dbuf  generic_dependent_4.dbuf  generic_enum.dbuf  generic_enum_dependent.dbuf  generic_simple.dbuf  generic_triple.dbuf  hard.dbuf  pattern_match.dbuf  simple.dbuf
test/cpp_test/correct_cpp_files/: complex_dependencies.h  rt_dependent_enums.h  rt_dependent_messages.h  simple.h  simple_enums.h  simple_messages.h
test/cpp_test/dbuf_files/: complex_dependencies.dbuf  rt_dependent_enums.dbuf  simple_enums.dbuf
test/cpp_test_samples/correct_cpp_files/: rt_dependent_enums  rt_dependent_messages.h  simple_enums  simple_enums.h  simple_messages
test/cpp_test_samples/dbuf_files/: rt_dependent_enums.dbuf  simple_enums.dbuf
test/go_test_samples/correct_go_files/: dependent_enums.go  dependent_messages.go  smoke.go
test/go_test_samples/dbuf_files/: dependent_enums.dbuf  dependent_messages.dbuf  smoke.dbuf
test/kotlin_test_samples/correct_kotlin_files/: enum.kt  hard_constructed.kt  message.kt  self_reference.kt  simple_constructed.kt
test/kotlin_test_samples/dbuf_files/: enum.dbuf  hard_constructed.dbuf  message.dbuf  self_reference.dbuf  simple_constructed.dbuf
test/sharp_test_samples/correct_sharp_files/: dependent_enum.cs  dependent_message.cs  simple_enum.cs  simple_message.cs
test/sharp_test_samples/dbuf_files/: dependent_message.dbuf  simple_enum.dbuf  (+1 more)
(+196 files in other folders)
