add_executable(dbuf "main.cc")
if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  target_compile_options(dbuf PRIVATE -Werror -Wall -Wextra -Wpedantic)
  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(dbuf PRIVATE -fsanitize=undefined)
  endif()
endif()
target_link_libraries(dbuf PRIVATE core)
target_link_options(dbuf PRIVATE -fsanitize=undefined)
